--- a/contato.html
+++ b/contato.html
@@ -37,7 +37,7 @@
                     <h4>Redes Sociais:</h4>
                     <div class="instagram">
                         <h4>Instagram:</h4>
-                    <img src="./img/Assunto.png" style="height: 25px;">
+                    <img src="./img/insta.png" style="height: 25px;">
                     </div>
 
                     <div class="telefone">
