--- a/horario.html
+++ b/horario.html
@@ -36,7 +36,7 @@
                     <h4>Redes Sociais:</h4>
                     <div class="instagram">
                         <h4>Instagram:</h4>
-                    <img src="./img/Assunto.png" style="height: 25px;">
+                    <img src="./img/insta.png" style="height: 25px;">
                     </div>
 
                     <div class="telefone">
