--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                         
                     <div class="mapa">
-                        <img src="./img/mapa.jpg" style="height: 130px;">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.892056779206!2d-51.176339999999996!3d-30.0399545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9519778ba97b8585%3A0x9c902c2e1178f510!2sAv.%20Prot%C3%A1sio%20Alves%2C%203371%20-%20Petr%C3%B3polis%2C%20Porto%20Alegre%20-%20RS%2C%2090410-003!5e0!3m2!1spt-BR!2sbr!4v1679133275228!5m2!1spt-BR!2sbr" width="225" height="130" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                         
                 </div>
